# x-engage-collaboration

./: .funcignore  .gitignore  DESIGN.md  README.md  engage_client.py  function_app.py  host.json  keyvault_client.py  pyproject.toml  requirements.txt  state_manager.py  x_client.py
tests/: conftest.py  test_engage_client.py  test_function_app.py  test_keyvault_client.py  test_state_manager.py  test_x_client.py
